--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
                   <p class="card-text mb-1"><strong>Fecha Viaje:</strong> ${row.fecha_viaje}</p>
                   <p class="card-text mb-1"><strong>Asiento:</strong> ${row.asiento}</p>
                   <p class="card-text mb-1"><strong>Estado:</strong> ${row.estado_transaccion}</p>
+                  <p class="card-text mb-1"><strong>Terminal:</strong> ${row.id_pos}</p>
+                  <p class="card-text mb-1"><strong>Terminal:</strong> ${row.total_transaccion}</p>
                   <p class="card-text mb-1"><strong>Código Transacción:</strong> ${row.codigo_transaccion || '—'}</p>
                   <p class="card-text"><strong>Código Autorización:</strong> ${row.codigo_autorizacion || '—'}</p>
                 </div>
