--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             cards += `
               <div class="card mb-3 shadow-sm">
                 <div class="card-body">
+                  <h6 class="card-title mb-1"><strong>Boleto:</strong> ${row.numero_boleto}</h6>
                   <h6 class="card-title mb-1"><strong>Reserva:</strong> ${row.codigo_reserva}</h6>
                   <p class="card-text mb-1"><strong>ID:</strong> ${row.id}</p>
                   <p class="card-text mb-1"><strong>RUT:</strong> ${row.rut}</p>
