--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                   <p class="card-text mb-1"><strong>Total Transaccion:</strong> ${row.total_transaccion}</p>
                   <p class="card-text mb-1"><strong>Código Transacción:</strong> ${row.codigo_transaccion || '—'}</p>
                   <p class="card-text"><strong>Código Autorización:</strong> ${row.codigo_autorizacion || '—'}</p>
-                   <p class="card-text"><strong>Tipo de Tarjeta:</strong> ${row.tipo_tajeta || '—'}</p>
+                  <p class="card-text"><strong>Tipo de Tarjeta:</strong> ${row.tipo_tarjeta || '—'}</p>
                 </div>
               </div>
             `;
