--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <title>Consulta Móvil</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link 
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
-    rel="stylesheet">
-  <script 
-    src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
+
 <body class="bg-light">
   <div class="container py-4">
     <h3 class="mb-4 text-center">Consulta de Registros</h3>
@@ -21,7 +20,8 @@
       </div>
       <div class="mb-3">
         <label for="codigo_autorizacion" class="form-label">Código Autorización</label>
-        <input type="text" id="codigo_autorizacion" name="codigo_autorizacion" class="form-control" placeholder="Ej: AUTH123456">
+        <input type="text" id="codigo_autorizacion" name="codigo_autorizacion" class="form-control"
+          placeholder="Ej: AUTH123456">
       </div>
       <div class="d-grid">
         <button type="submit" class="btn btn-primary">Buscar</button>
@@ -37,9 +37,12 @@
       </div>
     </div>
   </div>
+  <script>
+    sessionStorage.clear();
+  </script>
 
   <script>
-    $('#consulta-form').on('submit', function(e) {
+    $('#consulta-form').on('submit', function (e) {
       e.preventDefault();
 
       const rut = $('#rut').val().trim();
@@ -54,49 +57,76 @@
         return;
       }
 
-      $.getJSON(url, function(data) {
+      $.getJSON(url, function (data) {
+
+        $(document).on('click', '.generar-boleto', function () {
+          const id = $(this).data('id');
+          const registro = data.find(r => r.id == id);
+          if (registro) {
+            sessionStorage.setItem('boleto_data', JSON.stringify(registro));
+            window.location.href = './generar_boleto.html';
+          } else {
+            alert('No se encontró el registro.');
+          }
+        });
+      
+
+        
+
         let cards = '';
         if (data.length === 0) {
           cards = '<div class="alert alert-warning">No se encontraron registros.</div>';
         } else {
+
+
           data.forEach(row => {
-
             let iconoEstado = '';
-  const estado = row.estado_transaccion?.toLowerCase() || '';
+            const estado = row.estado_transaccion?.toLowerCase() || '';
 
-  if (estado.includes('realizado')) {
-    iconoEstado = '<span class="text-success fw-bold">✅</span>';
-  } else if (estado.includes('fallido') || estado.includes('pendiente')) {
-    iconoEstado = '<span class="text-danger fw-bold">❌</span>';
-  }
+            if (estado.includes('realizado')) {
+              iconoEstado = '<span class="text-success fw-bold">✅</span>';
+            } else if (estado.includes('fallido') || estado.includes('pendiente')) {
+              iconoEstado = '<span class="text-danger fw-bold">❌</span>';
+            }
+
+            const mostrarBotonGenerar = estado.includes('pago realizado') && (!row.numero_boleto || row.numero_boleto === 'null');
+
+
 
 
             cards += `
-              <div class="card mb-3 shadow-sm">
-                <div class="card-body">
-                  <h6 class="card-title mb-1"><strong>Boleto:</strong> ${row.numero_boleto}</h6>
-                  <h6 class="card-title mb-1"><strong>Reserva:</strong> ${row.codigo_reserva}</h6>
-                  <p class="card-text mb-1"><strong>ID:</strong> ${row.id}</p>
-                  <p class="card-text mb-1"><strong>RUT:</strong> ${row.rut}</p>
-                  <p class="card-text mb-1"><strong>Destino:</strong> ${row.destino}</p>
-                  <p class="card-text mb-1"><strong>Fecha Viaje:</strong> ${row.fecha_viaje}</p>
-                  <p class="card-text mb-1"><strong>Asiento:</strong> ${row.asiento}</p>
-                  <p class="card-text mb-1"><strong>Estado:</strong> ${row.estado_transaccion} ${iconoEstado}</p>
-                  <p class="card-text mb-1"><strong>Terminal:</strong> ${row.id_pos}</p>
-                  <p class="card-text mb-1"><strong>Total Transaccion:</strong> ${row.total_transaccion}</p>
-                  <p class="card-text mb-1"><strong>Código Transacción:</strong> ${row.codigo_transaccion || '—'}</p>
-                  <p class="card-text"><strong>Código Autorización:</strong> ${row.codigo_autorizacion || '—'}</p>
-                  <p class="card-text"><strong>Tipo de Tarjeta:</strong> ${row.tipo_tarjeta || '—'}</p>
-                </div>
-              </div>
-            `;
+    <div class="card mb-3 shadow-sm">
+      <div class="card-body">
+        <h6 class="card-title mb-1"><strong>Boleto:</strong> ${row.numero_boleto || '—'}</h6>
+        <h6 class="card-title mb-1"><strong>Reserva:</strong> ${row.codigo_reserva}</h6>
+        <p class="card-text mb-1"><strong>ID:</strong> ${row.id}</p>
+        <p class="card-text mb-1"><strong>RUT:</strong> ${row.rut}</p>
+        <p class="card-text mb-1"><strong>Id BUS:</strong> ${row.id_bus}</p>
+        <p class="card-text mb-1"><strong>Destino:</strong> ${row.destino}</p>
+        <p class="card-text mb-1"><strong>Fecha Viaje:</strong> ${row.fecha_viaje}</p>
+        <p class="card-text mb-1"><strong>Asiento:</strong> ${row.asiento}</p>
+        <p class="card-text mb-1"><strong>Estado:</strong> ${row.estado_transaccion} ${iconoEstado}</p>
+        <p class="card-text mb-1"><strong>Terminal:</strong> ${row.id_pos}</p>
+        <p class="card-text mb-1"><strong>Total Transacción:</strong> ${row.total_transaccion}</p>
+        <p class="card-text mb-1"><strong>Código Transacción:</strong> ${row.codigo_transaccion || '—'}</p>
+        <p class="card-text"><strong>Código Autorización:</strong> ${row.codigo_autorizacion || '—'}</p>
+        <p class="card-text"><strong>Tipo de Tarjeta:</strong> ${row.tipo_tarjeta || '—'}</p>
+        ${mostrarBotonGenerar ? `
+          <div class="mt-3">
+            <button class="btn btn-sm btn-success generar-boleto" data-id="${row.id}">Generar Boleto</button>
+          </div>
+        ` : ''}
+      </div>
+    </div>
+  `;
           });
         }
         $('#cards-resultados').html(cards);
-      }).fail(function() {
+      }).fail(function () {
         alert('Error al consultar los datos.');
       });
     });
   </script>
 </body>
+
 </html>
