chore: se cambia valor de estado_transaccion por 'Generado Manualmente'

--- a/generar_boleto.html
+++ b/generar_boleto.html
@@ -276,7 +276,7 @@
                 id_bus: sessionData.id_bus,
                 tipo_tarjeta: sessionData.tipo_tarjeta,
                 tarjeta_marca: sessionData.tarjeta_marca,
-                estado_transaccion: "Pago realizado",
+                estado_transaccion: "Generado Manualmente",
                 rut: sessionData.rut || "Sin RUT",
                 numTotem: sessionData.numTotem,
               };
