--- a/generar_boleto.html
+++ b/generar_boleto.html
@@ -205,7 +205,7 @@
             },
             origin_id: bus_datos.origin_id,
             destination_id: bus_datos.destination_id,
-            boarding_at: "224",
+            boarding_at: bus_datos.boarding_at,
             no_of_seats: "1",
             travel_date: bus_datos.travel_date,
             available_seats: bus_datos.available_seats,
