--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
                 iconoEstado = '<span class="text-danger fw-bold">❌</span>';
               }
 
+              // Fecha y hora del viaje en objeto Date
+              const viajeDateTime = new Date(`${row.fecha_viaje}T${row.hora_viaje}`);
+              const ahora = new Date();
+              const fechaVencida = viajeDateTime <= ahora;
+
               const mostrarBotonGenerar =
                 estado.includes("pago realizado") &&
                 (!row.numero_boleto || row.numero_boleto === "null");
@@ -128,9 +133,12 @@
           row.hora_viaje.slice(0, 5) || "—"
         } hrs</p>
         <p class="card-text mb-1"><strong>Asiento:</strong> ${row.asiento}</p>
-        <p class="card-text mb-1"><strong>Estado:</strong> ${
+        <p class="card-text mb-1"><strong>Estado Pago:</strong> ${
           row.estado_transaccion
         } ${iconoEstado}</p>
+         <p class="card-text mb-1"><strong>Estado Boleto:</strong> ${
+           row.estado_boleto
+         }</p>
         <p class="card-text mb-1"><strong>Terminal:</strong> ${row.id_pos}</p>
         <p class="card-text mb-1"><strong>Total Transacción:</strong> ${
           row.total_transaccion
@@ -145,13 +153,19 @@
           mostrarBotonGenerar
             ? `
           <div class="mt-3">
-            <button class="btn btn-sm btn-success generar-boleto p-2" data-id="${row.id}">Generar Boleto</button>
-          </div>
-        `
-            : ""
+            <button
+              class="btn btn-sm ${
+                fechaVencida ? "btn-secondary" : "btn-success"
+                } generar-boleto p-2"
+                data-id="${row.id}"
+                ${fechaVencida ? "disabled" : ""}
+                >Generar Boleto</button>
+         </div>
+          `
+         : ""
         }
       </div>
-    </div>
+   </div>
   `;
             });
           }
