add: se agrega lógica de encontrar servicio con asientos disponibles si el servicio actual no posee asientos libres

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             id="codigo_autorizacion"
             name="codigo_autorizacion"
             class="form-control"
-            placeholder="Ej: AUTH123456"
+            placeholder="Ej: 123456"
           />
         </div>
         <div class="d-grid">
