--- a/generar_boleto.html
+++ b/generar_boleto.html
@@ -10,6 +10,7 @@
     />
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script defer src="reserva.js"></script>
   </head>
 
   <body class="bg-light">
@@ -57,10 +58,10 @@
           <strong>Fecha de Viaje:</strong> <span id="fecha_confirmada"></span>
         </p>
         <p class="mb-2">
-          <strong>Asientos:</strong> <span id="asientos_confirmados"></span>
+          <strong>Hora Salida:</strong> <span id="hora_salida"></span>
         </p>
         <p class="mb-2">
-          <strong>Hora Salida:</strong> <span id="hora_salida"></span>
+          <strong>Asiento:</strong> <span id="asientos_confirmados"></span>
         </p>
         <p class="mb-2">
           <strong>Tipo de Bus:</strong> <span id="tipo_bus"></span>
@@ -90,258 +91,5 @@
         No se encontró la información del boleto.
       </div>
     </div>
-
-    <script>
-      bus_datos = {};
-      let asientosDisponibles = [];
-      idBus = "";
-
-      $(document).ready(function () {
-        $("#atras").on("click", function () {
-          window.location.href = "index.html";
-        });
-        const rawData = sessionStorage.getItem("boleto_data");
-        const asientoSelect = document.getElementById("asientoSelect");
-
-        if (rawData) {
-          try {
-            const boleto = JSON.parse(rawData);
-            idBus = boleto.id_bus;
-            const horaViaje = `${boleto.hora_viaje.slice(0, 5) + " hrs"}`;
-
-            $("#rut").text(boleto.rut);
-            $("#id_bus").text(boleto.id_bus);
-            $("#estado_boleto").text(boleto.estado_boleto);
-            $("#fecha_viaje").text(boleto.fecha_viaje);
-            $("#hora_viaje").text(horaViaje);
-            $("#boletoResumen").removeClass("d-none");
-
-            if (!idBus) {
-              asientoSelect.innerHTML =
-                '<option value="">Error: ID de bus no encontrado</option>';
-              return;
-            }
-
-            const url = `https://newstg3-gdsbus.kupos.cl/gds/api/ui_schedule/${idBus}.json?api_key=TSXFQYAPI25766888`;
-
-            axios
-              .get(url)
-              .then((response) => {
-                const availableString =
-                  response.data.result.bus_layout.available;
-                bus_datos = response.data.result;
-                boarding_at =
-                  response.data.result.boarding_stage_coordinates.split("|")[0];
-                console.log("bus_datos:", bus_datos);
-                const availableArray = availableString.split(",");
-
-                const seats = availableArray
-                  .map((item) => {
-                    const [num, price] = item.split("|");
-                    return {
-                      num: (num || "").trim(),
-                      price: (price || "0").trim(),
-                    };
-                  })
-                  .filter((seat) => seat.num !== "");
-
-                asientosDisponibles = seats;
-
-                asientoSelect.innerHTML =
-                  '<option value="">Seleccione un asiento</option>';
-                seats
-                  .sort((a, b) => a.num - b.num)
-                  .forEach((seat) => {
-                    const option = document.createElement("option");
-                    option.value = seat.num;
-                    option.textContent = `Asiento ${seat.num}`;
-                    asientoSelect.appendChild(option);
-                  });
-              })
-              .catch((error) => {
-                console.error("Error al cargar los asientos:", error);
-                asientoSelect.innerHTML =
-                  '<option value="">Error al cargar los asientos</option>';
-              });
-          } catch (err) {
-            console.error("Error al parsear boleto_data:", err);
-            $("#errorMsg")
-              .removeClass("d-none")
-              .text("Error al leer los datos del boleto.");
-          }
-        } else {
-          $("#errorMsg").removeClass("d-none");
-        }
-
-        // Evento cambio de asiento
-        asientoSelect.addEventListener("change", function () {
-          const asiento = asientoSelect.value;
-          const asientoSeleccionado = asientosDisponibles.find(
-            (s) => s.num === asiento
-          );
-          document.getElementById("asientoSeleccionado").textContent = asiento
-            ? `Asiento ${asiento}`
-            : "";
-
-          const payload = {
-            book_ticket: {
-              seat_details: {
-                seat_detail: [
-                  {
-                    seat_number: asientoSeleccionado.num,
-                    fare: asientoSeleccionado.price,
-                    title: "Mr",
-                    name: "Dorian gonzalez",
-                    age: "55",
-                    sex: "M",
-                    is_primary: "true",
-                    id_card_type: "1",
-                    id_card_number: "10520823k",
-                    id_card_issued_by: "oneone",
-                  },
-                ],
-              },
-              contact_detail: {
-                mobile_number: "942858102",
-                emergency_name: "Dorian Gonzalez",
-                email: "dgonzalez@wit.la",
-              },
-            },
-            origin_id: bus_datos.origin_id,
-            destination_id: bus_datos.destination_id,
-            boarding_at: boarding_at,
-            no_of_seats: "1",
-            travel_date: bus_datos.travel_date,
-            available_seats: bus_datos.available_seats,
-            cost: bus_datos.cost,
-            bus_type: bus_datos.bus_type,
-            route_id: bus_datos.route_id,
-          };
-
-          console.log("Payload de reserva:", payload);
-
-          const reservaUrl = `https://newstg3-gdsbus.kupos.cl/gds/api/tentative_booking/${idBus}.json?api_key=TSXFQYAPI25766888&region=chile`;
-          const confirmUrlBase = `https://newstg3-gdsbus.kupos.cl/gds/api/confirm_booking`;
-
-          asientoSelect.disabled = true;
-          $("#atras").prop("disabled", true);
-
-          $("#loaderReserva").removeClass("d-none");
-          $("#loaderConfirmacion").addClass("d-none");
-          $("#boletoConfirmado").addClass("d-none");
-
-          axios
-            .post(reservaUrl, payload)
-            .then((response) => {
-              $("#loaderReserva").addClass("d-none");
-              $("#loaderConfirmacion").removeClass("d-none");
-
-              const reserva = response.data.result.ticket_details.pnr_number;
-              console.log("Reserva temporal:", reserva);
-
-              return axios.post(
-                `${confirmUrlBase}/${reserva}.json?api_key=TSXFQYAPI25766888&region=chile`
-              );
-            })
-            .then((confirmResponse) => {
-              $("#loaderConfirmacion").addClass("d-none");
-
-              const ticket = confirmResponse.data.result.ticket_details;
-              $("#operator_pnr").text(ticket.operator_pnr);
-              $("#ticket_number").text(ticket.ticket_number);
-              $("#origen").text(ticket.origin);
-              $("#destino").text(ticket.destination);
-              $("#fecha_confirmada").text(ticket.travel_date);
-              $("#asientos_confirmados").text(ticket.seat_numbers);
-
-              let hora12 = ticket.dep_time.trim();
-              function convertir12a24(hora12) {
-                let [time, modifier] = hora12.split(" ");
-                let [hours, minutes] = time.split(":").map(Number);
-                if (modifier.toLowerCase() === "pm" && hours !== 12) {
-                  hours += 12;
-                }
-                if (modifier.toLowerCase() === "am" && hours === 12) {
-                  hours = 0;
-                }
-                let hours24 = hours < 10 ? "0" + hours : hours;
-                return `${hours24}:${
-                  minutes < 10 ? "0" + minutes : minutes
-                } hrs`;
-              }
-              const hora24 = convertir12a24(hora12);
-
-              $("#hora_salida").text(hora24);
-              $("#tipo_bus").text(ticket.bus_type);
-              $("#boletoConfirmado").removeClass("d-none");
-              $("#asientos").addClass("d-none");
-
-              asientoSelect.disabled = false;
-              $("#atras").prop("disabled", false);
-
-              const sessionData =
-                JSON.parse(sessionStorage.getItem("boleto_data")) || {};
-
-              const bookingData = {
-                ...sessionData,
-                numero_boleto: ticket.operator_pnr,
-                estado_boleto: "Confirmado",
-                origen: ticket.origin,
-                destino: ticket.destination,
-                fecha_viaje: ticket.travel_date,
-                hora_viaje: ticket.dep_time,
-                asiento: sessionData.asiento,
-                total_transaccion: sessionData.total_transaccion,
-                fecha_transaccion: sessionData.fecha_transaccion,
-                hora_transaccion: sessionData.hora_transaccion,
-                codigo_reserva: ticket.ticket_number,
-                codigo_transaccion: sessionData.codigo_transaccion,
-                codigo_autorizacion: sessionData.codigo_autorizacion,
-                id_pos: sessionData.id_pos,
-                id_bus: sessionData.id_bus,
-                tipo_tarjeta: sessionData.tipo_tarjeta,
-                tarjeta_marca: sessionData.tarjeta_marca,
-                estado_transaccion: "Generado Manualmente",
-                rut: sessionData.rut || "Sin RUT",
-                numTotem: sessionData.numTotem,
-              };
-
-              console.log("Datos del boleto:", bookingData);
-
-              const bookingDataUpdate = {
-                id: sessionData.id,
-                nuevo_estado: "Pago Intercambio",
-              };
-
-              console.log("Datos de actualización:", bookingDataUpdate);
-
-              // Guardado en base de datos
-              axios.post(
-                "https://log-totem.dev-wit.com/backend-log-totem-transbank/api.php",
-                { bookingData }
-              );
-              // Actualización en la base de datos
-              axios.post(
-                "https://log-totem.dev-wit.com/boletos/api/update.php",
-                bookingDataUpdate
-              );
-            })
-            .then(() => {
-              console.log("Guardado exitoso en DB (confirm booking)");
-            })
-            .catch((error) => {
-              $("#loaderReserva").addClass("d-none");
-              $("#loaderConfirmacion").addClass("d-none");
-              asientoSelect.disabled = false;
-              $("#atras").prop("disabled", false);
-              console.error(
-                "Error durante la reserva, confirmación o guardado:",
-                error
-              );
-              alert("Ocurrió un error al procesar el boleto.");
-            });
-        });
-      });
-    </script>
   </body>
 </html>
